
-------------------------------------------------------------------------------

Sat Sep 11 15:56:18 PDT 1999
(Raster)

ok - fixed that iconify and pager bug for good :)

-------------------------------------------------------------------------------

Sun Sep 12 10:19:20 PDT 1999
(Raster)

play desktop area swtichign sounds whenever u swithc - even witht he pager.. :)

-------------------------------------------------------------------------------

Sun Sep 12 10:39:46 PDT 1999
(Raster)

make sure we have name and class set on dialogs so rememebr.. can work on them

-------------------------------------------------------------------------------

Sun Sep 12 10:49:14 PDT 1999
(Raster)

and use those snapshot values for the dialogs damnit... :)

-------------------------------------------------------------------------------

Sun Sep 12 12:29:12 PDT 1999
(Raster)

make xchat icondef correct

dont remember everythign abotu every window ina group - just have every 
window int hat group rememebr its in that group and otherwise remember the
normal stuff.

-------------------------------------------------------------------------------

Mon Sep 13 09:10:06 PDT 1999
(Raster)

turn off focus list when changing desktop

-------------------------------------------------------------------------------

Tue Sep 14 19:33:15 EDT 1999
(Christian)

Added group borders to BrushedMetal, also made the groups be visualized when
they are switched in one of the groups dialogs. Apparently there's a bug
with imageclasses that use transparency, probably an Imlib issue.



-------------------------------------------------------------------------------

Tue Sep 14 10:53:14 PDT 1999
(Raster)

fix menu segfault bug

fix raiswlower for groups :)

make "abotu this theme" brign up the ABOUT for the CURRENT theme :)

-------------------------------------------------------------------------------

Tue Sep 14 11:50:29 PDT 1999
(Raster)

add click always raises patch... :)